# PlainEnglishBlazor/swagger.json
@@ -22,18 +22,30 @@
             "content": {
               "text/plain": {
                 "schema": {
-                  "$ref": "#/components/schemas/WeatherForecast"
-                }
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/WeatherForecast"
+                  }
+                },
+                "example": [{"id":1,"date":"2023-05-01T23:40:55.5931439-04:00","temperatureC":32,"temperatureF":89,"summary":"Test"},{"id":2,"date":"2023-05-02T23:40:55.5932717-04:00","temperatureC":34,"temperatureF":93,"summary":"Test 2"}]
               },
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/WeatherForecast"
-                }
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/WeatherForecast"
+                  }
+                },
+                "example": [{"id":1,"date":"2023-05-01T23:40:55.5931439-04:00","temperatureC":32,"temperatureF":89,"summary":"Test"},{"id":2,"date":"2023-05-02T23:40:55.5932717-04:00","temperatureC":34,"temperatureF":93,"summary":"Test 2"}]
               },
               "text/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/WeatherForecast"
-                }
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/WeatherForecast"
+                  }
+                },
+                "example": [{"id":1,"date":"2023-05-01T23:40:55.5931439-04:00","temperatureC":32,"temperatureF":89,"summary":"Test"},{"id":2,"date":"2023-05-02T23:40:55.5932717-04:00","temperatureC":34,"temperatureF":93,"summary":"Test 2"}]
               }
             }
           },
@@ -113,7 +125,8 @@
                   "items": {
                     "$ref": "#/components/schemas/WeatherForecast"
                   }
-                }
+                },
+                "example": [{"id":1,"date":"2023-05-01T23:40:55.6347841-04:00","temperatureC":32,"temperatureF":89,"summary":"Test"},{"id":2,"date":"2023-05-02T23:40:55.6347882-04:00","temperatureC":34,"temperatureF":93,"summary":"Test 2"}]
               },
               "application/json": {
                 "schema": {
@@ -121,7 +134,8 @@
                   "items": {
                     "$ref": "#/components/schemas/WeatherForecast"
                   }
-                }
+                },
+                "example": [{"id":1,"date":"2023-05-01T23:40:55.6347841-04:00","temperatureC":32,"temperatureF":89,"summary":"Test"},{"id":2,"date":"2023-05-02T23:40:55.6347882-04:00","temperatureC":34,"temperatureF":93,"summary":"Test 2"}]
               },
               "text/json": {
                 "schema": {
@@ -129,7 +143,8 @@
                   "items": {
                     "$ref": "#/components/schemas/WeatherForecast"
                   }
-                }
+                },
+                "example": [{"id":1,"date":"2023-05-01T23:40:55.6347841-04:00","temperatureC":32,"temperatureF":89,"summary":"Test"},{"id":2,"date":"2023-05-02T23:40:55.6347882-04:00","temperatureC":34,"temperatureF":93,"summary":"Test 2"}]
               }
             }
           },
